--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -125,15 +125,22 @@
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
+    /* padding: 0 22px; */
     /* padding-top: 15px; */
   }
 
   .main-section {
     /* padding: 0px 15px 0px 15px; */
+    width: 100%;
+    padding: 0;
     justify-content: stretch;
   }
 
   .dashboard {
-    grid-template-rows: 80px 1.6fr 1fr 57px;
+    grid-template-rows: 80px 1.2fr 1fr 57px;
+  }
+  .footer {
+    width: 90vw;
+    padding: 0;
   }
 }
