--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -51,6 +51,7 @@
 @media only screen and (max-width: 834px) {
   .chart {
     height: 50%;
-    width: 90vw;
+    width: 100vw;
+    padding-top: 10px;
   }
 }
