--- a/src/components/KeyStats/KeyStats.css
+++ b/src/components/KeyStats/KeyStats.css
@@ -70,6 +70,16 @@
     flex-direction: column;
   }
 
+  .stats-wrapper {
+    padding: 10px 20px;
+    min-width: 0;
+    max-width: 100vw;
+  }
+
+  .stats-title {
+    padding-left: 2px;
+  }
+
   .stats-section:nth-of-type(2) {
     margin: 0px;
   }
