--- a/src/components/LivePrice/LivePrice.css
+++ b/src/components/LivePrice/LivePrice.css
@@ -70,8 +70,11 @@
   }
 
   .live-container {
-    width: 190px;
+    width: auto;
+    flex: 5;
     padding-bottom: 10px;
+    border: none;
+    padding-right: 6px;
   }
 
   .live-price-error {
