--- a/src/components/TopPeers/TopPeers.css
+++ b/src/components/TopPeers/TopPeers.css
@@ -90,10 +90,11 @@
 
 @media only screen and (max-width: 834px) {
   .peers-wrapper {
-    width: 410px;
+    width: 90vw;
     border: none;
     margin: 0;
     margin-top: 10px;
+    padding-left: 0;
   }
 
   .peers-container {
