--- a/src/components/KeyStats/KeyStats.css
+++ b/src/components/KeyStats/KeyStats.css
@@ -79,6 +79,9 @@
   .stats-title {
     padding-left: 2px;
   }
+  .stats-row > span {
+    padding-right: 6px;
+  }
 
   .stats-section:nth-of-type(2) {
     margin: 0px;
