--- a/src/components/TopPeers/TopPeers.css
+++ b/src/components/TopPeers/TopPeers.css
@@ -90,7 +90,7 @@
 
 @media only screen and (max-width: 834px) {
   .peers-wrapper {
-    width: 90vw;
+    width: 100vw;
     border: none;
     margin: 0;
     margin-top: 10px;
@@ -98,7 +98,7 @@
   }
 
   .peers-container {
-    margin-right: 32px;
+    padding: 0 26px;
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
@@ -106,5 +106,6 @@
 
   .peers-title {
     padding-top: 0px;
+    padding-left: 22px;
   }
 }
