fix: summary paragraph size

--- a/src/components/Summary/summary.css
+++ b/src/components/Summary/summary.css
@@ -115,8 +115,8 @@
     margin: 0;
   }
   .company-summary {
-    width: 80vw;
     margin: 0;
+    word-break: break-all;
   }
 
   /* .company-name {
