--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -1,9 +1,7 @@
 .dashboard {
-  width: 100%;
-  height: 100vh;
   display: grid;
   grid-template-columns: 129px 1fr 351px;
-  grid-template-rows: 1fr 57px;
+  grid-template-rows: 1fr 56px;
   grid-template-areas:
     'left-sidebar main-section right-sidebar'
     'left-sidebar footer right-sidebar';
@@ -12,23 +10,21 @@
 
 .left-sidebar {
   grid-area: left-sidebar;
-  width: 100%;
 }
 
 .top-bar {
   grid-area: top-bar;
-  width: 100%;
   display: none;
 }
 
 .main-section {
   grid-area: main-section;
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  justify-content: start;
-  padding: 0px 35px;
+  min-width: 0;
+  justify-content: flex-start;
+  padding: 0px 37px;
   background-color: var(--core-secondary-1);
   animation: slide-up 0.75s ease-out forwards;
   -webkit-animation: slide-up 0.75s ease-out forwards;
@@ -45,7 +41,6 @@
 
 .right-sidebar {
   grid-area: right-sidebar;
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -64,17 +59,26 @@
 }
 .footer {
   grid-area: footer;
-  width: 100%;
-  padding: 0px 35px;
+  padding: 0px 32px;
   background-color: var(--core-secondary-1);
 }
 
-.search-live {
-  display: flex;
-  width: 100%;
-}
-
 @media only screen and (max-width: 1366px) {
+  .dashboard {
+    height: auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: 80px auto auto 56px;
+    grid-template-areas:
+      'top-bar'
+      'main-section'
+      'right-sidebar'
+      'footer';
+  }
+
+  .main-section {
+    padding-bottom: 85px;
+  }
+
   .left-sidebar {
     display: none;
   }
@@ -87,58 +91,45 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-around;
-    padding-top: 25px;
-    padding-bottom: 30px;
-  }
-
-  .dashboard {
-    height: auto;
-    grid-template-columns: 1fr;
-    grid-template-rows: 80px 2.7fr 1fr 57px;
-    grid-template-areas:
-      'top-bar'
-      'main-section'
-      'right-sidebar'
-      'footer';
+    padding-top: 30px;
+    padding-bottom: 40px;
   }
 }
 
 @media only screen and (max-width: 1024px) {
   .dashboard {
-    height: auto;
     grid-template-columns: 1fr;
-    grid-template-rows: 80px 2fr 1fr 57px;
+    grid-template-rows: 80px auto auto 57px;
     grid-template-areas:
       'top-bar'
       'main-section'
       'right-sidebar'
       'footer';
   }
+
   .right-sidebar {
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-bottom: 25px;
   }
 }
 
 @media only screen and (max-width: 834px) {
+  .dashboard {
+    grid-template-rows: 80px auto auto 57px;
+  }
+
+  .main-section {
+    padding: 0 14px 10px 14px;
+    padding-bottom: 10px;
+  }
+
   .right-sidebar {
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
-    /* padding: 0 22px; */
-    /* padding-top: 15px; */
   }
 
-  .main-section {
-    /* padding: 0px 15px 0px 15px; */
-    width: 100%;
-    padding: 0;
-    justify-content: stretch;
-  }
-
-  .dashboard {
-    grid-template-rows: 80px 1.4fr 1fr 57px;
-  }
   .footer {
     padding: 0;
   }
