--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -1,11 +1,11 @@
 .homepage {
-  width: 100%;
   display: flex;
+  height: 100vh;
+  width: 100vw;
 }
 
 @media only screen and (max-width: 834px) {
   .homepage {
     flex-direction: column;
-    height: 100vh;
   }
 }
