--- a/src/components/Indexes/index.css
+++ b/src/components/Indexes/index.css
@@ -3,11 +3,9 @@
 .index {
   display: flex;
   justify-content: center;
-  align-items: center;
-  border-top: 1px solid var(--core-secondary-3);
-  width: 100%;
+  align-items: flex-start;
   padding-top: 8px;
-  padding-bottom: 16px;
+  border-top: 1px solid var(--core-secondary-3);
   font-family: 'Roboto';
   font-size: 12px;
 }
@@ -66,10 +64,6 @@
   float: left;
 }
 
-.index-change {
-  padding-top: 4px;
-}
-
 .index-line {
   height: 37px;
   border-right: 1px solid var(--core-secondary-3);
@@ -81,6 +75,7 @@
   align-items: center;
   padding-right: 15px;
   padding-left: 24px;
+  padding-top: 9px;
 }
 
 .index-combo:last-child {
@@ -98,12 +93,20 @@
 }
 
 @media only screen and (max-width: 834px) {
+  .index {
+    padding: 0;
+    padding-top: 10px;
+  }
+
   .index-combo {
     flex-direction: column;
+    padding: 0;
+    padding-top: 5px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 
   .name {
-    padding-right: 7px;
-    padding-top: 6px;
+    padding: 0;
   }
 }
