--- a/src/components/KeyStats/KeyStats.css
+++ b/src/components/KeyStats/KeyStats.css
@@ -1,7 +1,5 @@
 .stats-wrapper {
-  width: 100%;
-  height: 36%;
-  padding: 30px 7px 0px 7px;
+  padding-top: 33px;
 }
 
 .key-stats-error {
@@ -33,7 +31,7 @@
 }
 
 .stats-section {
-  width: 100%;
+  flex: 1;
 }
 
 .stats-section:nth-of-type(2) {
@@ -71,9 +69,7 @@
   }
 
   .stats-wrapper {
-    padding: 30px 20px 20px 20px;
-    min-width: 0;
-    max-width: 100vw;
+    padding: 31px 8px 20px 8px;
   }
 
   .stats-title {
