--- a/src/components/LivePrice/LivePrice.css
+++ b/src/components/LivePrice/LivePrice.css
@@ -3,9 +3,8 @@
 .live-container {
   display: flex;
   align-items: flex-end;
-  justify-content: end;
-  width: 290px;
-  padding-bottom: 17px;
+  width: fit-content;
+  padding-bottom: 14px;
   border-bottom: 2px solid var(--core-secondary-3);
 }
 
@@ -17,20 +16,26 @@
   padding-right: 10px;
 }
 
+.price-change {
+  display: flex;
+  white-space: nowrap;
+  padding-bottom: 4px;
+}
+
 .price-change-positive {
+  width: fit-content;
   font-size: 16px;
   font-family: Roboto;
   font-weight: 500;
   color: #01c38d;
-  padding-bottom: 3px;
 }
 
 .price-change-negative {
+  width: fit-content;
   font-size: 16px;
   font-family: Roboto;
   font-weight: 500;
   color: #ff274b;
-  padding-bottom: 3px;
 }
 
 .live-price-error {
@@ -47,7 +52,6 @@
 }
 
 .arrow {
-  float: left;
 }
 
 @media only screen and (max-width: 834px) {
