--- a/src/components/SearchScreen/SearchScreen.css
+++ b/src/components/SearchScreen/SearchScreen.css
@@ -1,20 +1,17 @@
 .search {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100vh;
+  flex: 1;
   padding: 0 32px;
   background-color: var(--core-secondary-1);
 }
 
 input {
-  border: none;
   width: 100%;
-  border-bottom: 2px solid var(--core-secondary-3);
-  padding-bottom: 14px;
+  border: none;
   appearance: none;
+  padding-bottom: 14px;
+  border-bottom: 2px solid var(--core-secondary-3);
   background-color: var(--core-secondary-1);
   font-size: 32px;
   color: #2b2b2b;
@@ -29,24 +26,21 @@ input:focus-visible {
 }
 
 .search-wrapper {
-  position: relative;
-  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
 }
 
 .margin {
-  margin-top: 40px;
+  margin-top: 43px;
 }
 
 .input-class {
-  flex: 1;
+  width: 100%;
 }
 
 @media only screen and (max-width: 834px) {
   .search {
-    justify-content: start;
+    align-items: flex-start;
     padding-top: 16px;
   }
 
@@ -56,17 +50,18 @@ input:focus-visible {
   }
 
   .search-wrapper {
-    align-items: flex-start;
+    /* align-items: flex-start; */
     border-bottom: 2px solid var(--core-secondary-3);
   }
   .margin {
     margin-top: 20px;
   }
 
-  .input-class {
+  /* .input-class {
     width: auto;
     padding-left: 8px;
-  }
+  } */
+
   input {
     font-size: 16px;
     border: none;
