--- a/src/components/SplashScreen/SplashScreen.css
+++ b/src/components/SplashScreen/SplashScreen.css
@@ -22,11 +22,11 @@
 
 @media only screen and (max-width: 834px) {
   .splash-screen-short {
-    width: 100%;
-    height: 50vh;
-    padding: 0;
     display: flex;
     justify-content: end;
+    flex: 1;
+    width: 100%;
+    padding: 0;
     padding-bottom: 33px;
   }
 }
