--- a/src/components/Summary/summary.css
+++ b/src/components/Summary/summary.css
@@ -97,41 +97,30 @@
 
 @media only screen and (max-width: 834px) {
   .summary-container {
-    width: 100%;
-    margin-top: 30px;
-    margin-right: 0px;
-    padding: 0 26px;
+    width: 350px;
+    padding: 0;
+    margin: 0;
+    padding-top: 48px;
   }
 
   .summary-title {
     margin: 0;
-    margin-left: -4px;
+    padding-left: 10px;
   }
   .company-name {
     margin: 0;
+    padding-left: 14px;
   }
 
   .company-link {
     margin: 0;
+    padding-left: 14px;
   }
   .company-summary {
+    width: 340px;
     margin: 0;
+    padding: 0;
+    padding-left: 14px;
     word-break: break-all;
   }
-
-  /* .company-name {
-    margin: 0px;
-  }
-
-  .summary-title {
-    margin: 0px;
-  }
-
-  .company-link {
-    margin: 0px;
-  }
-
-  .company-summary {
-    margin: 0px;
-  } */
 }
