--- a/src/components/TopPeers/TopPeers.css
+++ b/src/components/TopPeers/TopPeers.css
@@ -90,22 +90,26 @@
 
 @media only screen and (max-width: 834px) {
   .peers-wrapper {
-    width: 100vw;
+    width: 350px;
     border: none;
     margin: 0;
-    margin-top: 10px;
-    padding-left: 0;
-  }
-
-  .peers-container {
-    padding: 0 26px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
+    padding: 0;
+    padding-top: 52px;
   }
 
   .peers-title {
-    padding-top: 0px;
-    padding-left: 22px;
+    padding: 0;
+    margin: 0;
+    padding-left: 10px;
+    padding-bottom: 17px;
+  }
+
+  .peers-container {
+    padding: 0;
+    margin: 0;
+    padding-left: 14px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
