--- a/src/components/SuggestionPanel/SuggestionPanel.css
+++ b/src/components/SuggestionPanel/SuggestionPanel.css
@@ -1,12 +1,11 @@
 .suggestion-panel {
-  width: 100%;
   background-color: var(--core-secondary);
   padding: 10px 8px 20px 8px;
   border-radius: 12px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
-  position: absolute;
   z-index: 1;
   font-family: Roboto;
+  overflow-wrap: break-word;
 }
 .market-name {
   border-bottom: 1px solid var(--core-secondary-3);
